@@ -3,15 +3,13 @@ package com.ztrolix.zlibs;
 import com.mojang.brigadier.Command;
 import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.ztrolix.zlibs.api.custom;
-import com.ztrolix.zlibs.init.ItemGroupInit;
-import com.ztrolix.zlibs.init.ItemInit;
 import net.fabricmc.api.ModInitializer;
 import net.fabricmc.fabric.api.command.v2.CommandRegistrationCallback;
 import net.fabricmc.fabric.api.gamerule.v1.GameRuleFactory;
 import net.fabricmc.fabric.api.gamerule.v1.GameRuleRegistry;
-import net.minecraft.block.Block;
 import net.minecraft.command.argument.EntityArgumentType;
-import net.minecraft.item.*;
+import net.minecraft.item.Item;
+import net.minecraft.item.ItemGroups;
 import net.minecraft.scoreboard.AbstractTeam;
 import net.minecraft.server.command.ServerCommandSource;
 import net.minecraft.server.network.ServerPlayerEntity;
@@ -26,7 +24,6 @@ import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static net.minecraft.command.argument.MessageArgumentType.getMessage;
@@ -187,8 +184,8 @@ public class ZtrolixLibs implements ModInitializer {
         LOGGER.info("Loaded: LanguageUtil");
         LOGGER.info("Loaded: Sounds");
 
-        Item zlibs_item = custom.Item("zlibs_item", MOD_ID, ItemGroups.TOOLS);
-        List<Item> items = Arrays.asList(
+        Item zlibs_item = custom.Item("zlibs_item", MOD_ID);
+        List<Item> items = List.of(
                 zlibs_item
         );
         custom.ItemGroup("zlibs_group", MOD_ID, zlibs_item, items);
